backport: re PR c/26774 (Out of memory compiling 9-line Delta-reduced Linux kernel driver msp3400.c)

gcc/

2006-04-21  Carlos O'Donell  <carlos@codesourcery.com>
	
	Backport from mainline:
	2006-04-19  Carlos O'Donell  <carlos@codesourcery.com>
		    Nathan Sidwell  <nathan@codesourcery.com>
	PR c/26774
	* stor-layout.c (update_alignment_for_field): Do not align 
	ERROR_MARK nodes.
	(place_union_field): Place union field at the start of the union.
	(place_field): Move ERROR_MARK check later, and use the current
	allocation position to maintain monotonicity.

gcc/testsuite/

2006-04-21  Carlos O'Donell  <carlos@codesourcery.com>

	Backport from mainline:
	2006-04-19  Carlos O'Donell  <carlos@codesourcery.com>
	PR c/26774
	* gcc.dg/struct-parse-1.c: New test case.

From-SVN: r113155